refactor: 💡 file name

--- a/main.ipynb
+++ b/main.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
     "\n",
     "mapa.get_root().html.add_child(fl.Element(legend_html))\n",
     "\n",
-    "mapa.save('mapa.html')"
+    "mapa.save('index.html')"
    ]
   }
  ],
